Enable several API access only with teacher role
