# backend/src/main/java/ch/japt/epj/api/controller/PersonController.java
@@ -6,6 +6,7 @@ import ch.japt.epj.library.SortParameterHandler;
 import ch.japt.epj.model.PersonModel;
 import ch.japt.epj.model.dto.PersonDto;
 import ch.japt.epj.model.dto.RegPersonDto;
+import ch.japt.epj.security.CustomUserDetails;
 import ch.japt.epj.security.JwtTokenProvider;
 import io.swagger.annotations.Api;
 import java.util.List;
@@ -14,10 +15,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.annotation.Secured;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
@@ -27,15 +30,14 @@ import org.springframework.web.bind.annotation.RequestParam;
 public class PersonController implements PersonApi, PaginatedPerson {
 
   private final PersonModel personModel;
-  private final JwtTokenProvider tokenProvider;
 
   public PersonController(
       @Autowired PersonModel personModel, @Autowired JwtTokenProvider tokenProvider) {
     this.personModel = personModel;
-    this.tokenProvider = tokenProvider;
   }
 
   @Override
+  @Secured({"ROLE_TEACHER"})
   public ResponseEntity<Page<PersonDto>> personGet(
       @Valid @RequestParam(value = "page", defaultValue = "0") int page,
       @Valid @RequestParam(value = "limit", defaultValue = "5") int limit,
@@ -46,15 +48,14 @@ public class PersonController implements PersonApi, PaginatedPerson {
   }
 
   @Override
-  public ResponseEntity<PersonDto> getCurrentPerson(
-      @RequestHeader("Authorization") String authorization) {
-    String tokenBaseString = "Bearer";
-    String token = authorization.substring(tokenBaseString.length(), authorization.length());
-    Long userId = tokenProvider.getUserIdFromJWT(token);
-    return new ResponseEntity<>(personModel.getPerson(userId), HttpStatus.OK);
+  public ResponseEntity<PersonDto> getCurrentPerson() {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    long personId = ((CustomUserDetails) authentication.getPrincipal()).getPersonId();
+    return new ResponseEntity<>(personModel.getPerson(personId), HttpStatus.OK);
   }
 
   @Override
+  @Secured({"ROLE_TEACHER"})
   public ResponseEntity<List<PersonDto>> getPersonById(
       @Valid @PathVariable("id") List<Integer> id) {
     return new ResponseEntity<>(personModel.getPeople(id), HttpStatus.OK);
