# backend/src/main/resources/api/swagger.yaml
@@ -145,6 +145,32 @@ paths:
             items:
               $ref: "#/definitions/NewExercise"
 
+  /person:
+    put:
+          tags:
+          - "person"
+          summary: "Update an existing person"
+          description: ""
+          operationId: "updatePerson"
+          consumes:
+          - "application/json"
+          produces:
+          - "application/json"
+          parameters:
+          - in: "body"
+            name: "body"
+            description: "person object that needs to be editted in the store"
+            required: true
+            schema:
+              $ref: "#/definitions/RegPerson"
+          responses:
+            400:
+              description: "Invalid ID supplied"
+            404:
+              description: "person not found"
+            405:
+              description: "Validation exception"
+
   /person/{id}:
     get:
       tags:
@@ -171,6 +197,7 @@ paths:
             type: array
             items:
               $ref: "#/definitions/Person"
+
   /person/current:
      get:
         tags:
@@ -180,40 +207,11 @@ paths:
         operationId: "getCurrentPerson"
         produces:
         - "application/json"
-        parameters:
-        - in: "header"
-          name: "Authorization"
-          type: "string"
         responses:
           200:
             description: "Current person found"
             schema:
                 $ref: "#/definitions/Person"
-  /person:
-    put:
-          tags:
-          - "person"
-          summary: "Update an existing person"
-          description: ""
-          operationId: "updatePerson"
-          consumes:
-          - "application/json"
-          produces:
-          - "application/json"
-          parameters:
-          - in: "body"
-            name: "body"
-            description: "person object that needs to be editted in the store"
-            required: true
-            schema:
-              $ref: "#/definitions/RegPerson"
-          responses:
-            400:
-              description: "Invalid ID supplied"
-            404:
-              description: "person not found"
-            405:
-              description: "Validation exception"
 
   /auth/register:
     post:
